skill studio alignment fixes

--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -41,7 +41,7 @@
 
   .logo {
     img {
-      margin-right: 75px;
+      margin-right: 35px;
 
       @media only screen and (max-width: 480px) {
         margin-right: 15px;
@@ -169,8 +169,8 @@
         height: 20px;
       }
       &:nth-child(4) {
-        background: url('../../../../assets/images/home/insights-menu-icon.svg') no-repeat;
-        width: 20px;
+        background: url('../../../../assets/images/home/llmhub-menu-icon.svg') no-repeat;
+        width: 26px;
         height: 20px;
       }
       &:nth-child(5) {
